Disable esy release since it's unnecessary
We dont publish prebuilts to npm anymore. We have npm-cli/

--- a/.ci/esy-build-steps.yml
+++ b/.ci/esy-build-steps.yml
@@ -29,8 +29,8 @@ steps:
     env:
       PESY_CLONE_PATH: $(Build.SourcesDirectory)
       OCAMLRUNPARAM: 'b'
-  - script: "esy release"
-    displayName: "esy release"
+  # - script: "esy release"
+  #   displayName: "esy release"
   - template: utils/publish-build-cache.yml
 
   # Run tests or any additional steps here
