Run e2e tests inplace (#109)
 Virtual modules

* Escape backslash

Since CI path has \1 in it and Str.replace gets confused

* Disable esy release since it's unnecessary

We dont publish prebuilts to npm anymore. We have npm-cli/

* rm -rf ~/.esy to make space

* Disable release of prebuilts

--- a/.ci/esy-build-steps.yml
+++ b/.ci/esy-build-steps.yml
@@ -13,21 +13,26 @@ steps:
   - template: utils/create-docs.yml
   - script: "esy test"
     displayName: "Test command"
-  # - script: mkdir $(System.DefaultWorkingDirectory)\..\tests-tmp-dir
-  #   displayName: 'Creating temporary workspace for tests'
-  #   condition: eq(variables['Agent.OS'], 'Windows_NT')
-  # - script: .\_build\install\default\bin\Runner.exe
-  #   displayName: 'Running e2e tests'
-  #   condition: eq(variables['Agent.OS'], 'Windows_NT')
-  #   env:
-  #     TEMP: $(System.DefaultWorkingDirectory)\..\tests-tmp-dir
+  - script: mkdir $(System.DefaultWorkingDirectory)\..\tests-tmp-dir
+    displayName: 'Creating temporary workspace for tests'
+    condition: eq(variables['Agent.OS'], 'Windows_NT')
+  - script: .\_build\install\default\bin\Runner.exe
+    displayName: 'Running e2e tests'
+    condition: eq(variables['Agent.OS'], 'Windows_NT')
+    env:
+      OCAMLRUNPARAM: 'b'
+      PESY_CLONE_PATH: $(Build.SourcesDirectory)
+      TEMP: $(System.DefaultWorkingDirectory)\..\tests-tmp-dir
   - script: ./_build/install/default/bin/Runner.exe
     displayName: 'Running e2e tests'
     condition: ne(variables['Agent.OS'], 'Windows_NT')
     env:
+      PESY_CLONE_PATH: $(Build.SourcesDirectory)
       OCAMLRUNPARAM: 'b'
-  - script: "esy release"
-    displayName: "esy release"
+  # - script: "esy release"
+  #   displayName: "esy release"
+  - bash: rm -rf ~/.esy/3/b
+    displayName: 'Emptying ~/.esy/3/b to clear up space'
   - template: utils/publish-build-cache.yml
 
   # Run tests or any additional steps here
