--- a/.ci/cross-release.yml
+++ b/.ci/cross-release.yml
@@ -1,37 +1,39 @@
 steps:
-  - template: utils/use-node.yml
+  - script: echo "No release steps. They are disabled"
+    displayName: "[Disabled] Release steps"
+  # - template: utils/use-node.yml
 
-  - script: "mkdir _release"
-    displayName: "Create _release dir"
+  # - script: "mkdir _release"
+  #   displayName: "Create _release dir"
 
-  - template: release-platform-setup.yml
-    parameters:
-      platform: "Linux"
-      folder: "platform-linux"
+  # - template: release-platform-setup.yml
+  #   parameters:
+  #     platform: "Linux"
+  #     folder: "platform-linux"
 
-  - template: release-platform-setup.yml
-    parameters:
-      platform: "macOS"
-      folder: "platform-darwin"
+  # - template: release-platform-setup.yml
+  #   parameters:
+  #     platform: "macOS"
+  #     folder: "platform-darwin"
 
-  - template: release-platform-setup.yml
-    parameters:
-      platform: "Windows"
-      folder: "platform-windows-x64"
+  # - template: release-platform-setup.yml
+  #   parameters:
+  #     platform: "Windows"
+  #     folder: "platform-windows-x64"
 
-  - script: "node .ci/pipelines-release.js"
-    displayName: "node .ci/pipelines-release.js"
-    continueOnError: true
+  # - script: "node .ci/pipelines-release.js"
+  #   displayName: "node .ci/pipelines-release.js"
+  #   continueOnError: true
 
-  - script: "npm pack ."
-    displayName: "npm pack"
-    workingDirectory: "_release"
+  # - script: "npm pack ."
+  #   displayName: "npm pack"
+  #   workingDirectory: "_release"
 
-  - bash: "node .ci/checksum.js _release/pesy-0.1.0-alpha.4.tgz"
-    displayName: "Calculating sha1"
+  # - bash: "node .ci/checksum.js _release/pesy-0.1.0-alpha.4.tgz"
+  #   displayName: "Calculating sha1"
 
-  - task: PublishBuildArtifacts@1
-    displayName: "Publish Artifact: Release"
-    inputs:
-      PathtoPublish: "_release"
-      ArtifactName: Release
+  # - task: PublishBuildArtifacts@1
+  #   displayName: "Publish Artifact: Release"
+  #   inputs:
+  #     PathtoPublish: "_release"
+  #     ArtifactName: Release
