--- a/npm-cli/package.json
+++ b/npm-cli/package.json
@@ -25,6 +25,7 @@
     ]
   },
   "scripts": {
+    "rollup": "rollup -c rollup.config.js",
     "bsb": "bsb -make-world",
     "build": "npm run bsb && npm run prettier",
     "package": "node scripts/vendor-template.js && npm run build",
@@ -49,6 +50,11 @@
   ],
   "license": "MIT",
   "devDependencies": {
+    "bs-platform": "^7.0.1",
+    "rollup": "^1.16.2",
+    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-node-resolve": "^5.0.4",
+    "tablecloth-bucklescript": "0.0.6",
     "@glennsl/bs-jest": "^0.4.9",
     "prettier": "^1.19.1"
   },
@@ -57,7 +63,6 @@
   },
   "homepage": "https://github.com/esy/pesy#readme",
   "dependencies": {
-    "bs-platform": "^7.0.1",
     "chalk": "^3.0.0",
     "download-git-repo": "^2.0.0",
     "source-map-support": "^0.5.16",
