--- a/npm-cli/bsconfig.json
+++ b/npm-cli/bsconfig.json
@@ -16,7 +16,11 @@
     "in-source": true
   },
   "suffix": ".bs.js",
-  "bs-dependencies": ["@glennsl/bs-jest", "tablecloth-bucklescript"],
+  "bs-dependencies": [
+    "@glennsl/bs-jest",
+    "tablecloth-bucklescript",
+    "@prometheansacrifice/bs-cmdliner"
+  ],
   "bsc-flags": ["-bs-g"],
   "warnings": {
     "number": "-44-102-20",
