--- a/npm-cli/package.json
+++ b/npm-cli/package.json
@@ -54,6 +54,7 @@
     "@glennsl/bs-jest": "^0.5.0",
     "@prometheansacrifice/bs-cmdliner": "1.0.4000",
     "@rollup/plugin-commonjs": "^11.0.2",
+    "@rollup/plugin-json": "^4.0.2",
     "@rollup/plugin-node-resolve": "^7.1.1",
     "bs-platform": "7.0.1",
     "prettier": "^1.19.1",
@@ -65,8 +66,12 @@
   },
   "homepage": "https://github.com/esy/pesy#readme",
   "dependencies": {
+    "@glennsl/bs-json": "^5.0.2",
     "chalk": "^3.0.0",
     "download-git-repo": "^2.0.0",
+    "request": "^2.88.2",
+    "request-progress": "^3.0.0",
+    "rimraf": "^3.0.2",
     "source-map-support": "^0.5.16",
     "walk-sync": "^2.0.2"
   },
