--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,7 @@ jobs:
   - template: .ci/build-platform.yml
     parameters:
       platform: macOS
-      vmImage: macOS-10.13
+      vmImage: macOS-latest
 
   # Need windows-2019 to do esy import/export-dependencies
   # which assumes you have bsdtar (tar.exe) in your system
@@ -37,7 +37,7 @@ jobs:
       - macOS
       - Windows
     pool:
-      vmImage: macOS-10.13
+      vmImage: macOS-latest
       demands: node.js
     steps:
       - template: .ci/cross-release.yml
