--- a/npm-cli/package.json
+++ b/npm-cli/package.json
@@ -27,6 +27,7 @@
   "scripts": {
     "rollup": "rollup -c rollup.config.js",
     "rollup:watch": "rollup -c rollup.config.js -w",
+    "docs": "bsdoc build pesy",
     "bsb": "bsb -make-world",
     "build": "npm run bsb && npm run rollup",
     "package": "node scripts/vendor-template.js && npm run build",
@@ -60,7 +61,8 @@
     "bs-platform": "7.0.1",
     "prettier": "^1.19.1",
     "rollup": "^1.16.2",
-    "tablecloth-bucklescript": "0.0.6"
+    "tablecloth-bucklescript": "0.0.6",
+    "bsdoc": "*"
   },
   "bugs": {
     "url": "https://github.com/esy/pesy/issues"
