--- a/bin/dune
+++ b/bin/dune
@@ -1,3 +1,7 @@
-(executable (name Pesy) (modules (:standard)) (public_name pesy)
-    (libraries pesy--esy-pesy.errors pesy--esy-pesy.lib pesy--esy-pesy.utils
-        cmdliner str findlib))
+(executable
+ (package pesy--esy-pesy)
+ (name Pesy)
+ (modules (:standard))
+ (public_name pesy)
+ (libraries pesy--esy-pesy.errors pesy--esy-pesy.lib pesy--esy-pesy.utils
+            cmdliner str findlib))
