--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     }
   },
   "scripts": {
-    "doc": "esy dune build @doc -p pesy--esy-pesy",
+    "doc": "esy dune build @doc -p pesy--esy-pesy,PesyE2E",
     "test:unit": "esy b dune exec ./unit-tests/runner/RunUnitTests.exe",
     "test:e2e": "./_build/default/e2e-tests/Runner.exe",
     "test": "esy run-script test:unit"
