--- a/.ci/cross-release.yml
+++ b/.ci/cross-release.yml
@@ -29,7 +29,7 @@ steps:
   #   displayName: "npm pack"
   #   workingDirectory: "_release"
 
-  # - bash: "node .ci/checksum.js _release/pesy-0.1.0-alpha.4.tgz"
+  # - bash: "node .ci/checksum.js _release/pesy-0.1.0-dev.21.tgz"
   #   displayName: "Calculating sha1"
 
   # - task: PublishBuildArtifacts@1
