--- a/site/package.json
+++ b/site/package.json
@@ -1,30 +1,30 @@
 {
-  "name": "site",
-  "version": "0.0.0",
-  "private": true,
+  "name": "Refresh",
+  "description": "Fork of the wonderful Flatdoc",
+  "keywords": [
+    "documentation",
+    "markdown"
+  ],
+  "author": "Rico Sta. Cruz <hi@ricostacruz.com>",
+  "version": "0.9.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/rstacruz/flatdoc.git"
+  },
   "scripts": {
-    "start": "docusaurus start",
-    "build": "docusaurus build",
-    "swizzle": "docusaurus swizzle",
-    "deploy": "docusaurus deploy"
+    "test": "mocha",
+    "bundle": "node ./Refresh.js bundle"
   },
-  "dependencies": {
-    "@docusaurus/core": "^2.0.0-alpha.40",
-    "@docusaurus/preset-classic": "^2.0.0-alpha.40",
-    "classnames": "^2.2.6",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "main": "Refresh.js",
+  "devDependencies": {
+    "mocha": "1.10.0",
+    "chai": "1.6.0",
+    "jsdom": "*",
+    "uglify-js": "2.3.6",
+    "stylus": "0.46.3",
+    "nib": "0.9.1",
+    "commander": "1.1.1",
+    "dox": "0.4.3",
+    "inliner": "*"
   }
 }
