--- a/.ci/utils/use-cache-esy.yml
+++ b/.ci/utils/use-cache-esy.yml
@@ -12,4 +12,4 @@ steps:
       key: 'v1 | esy-sources | "$(Agent.OS)" | "$(Build.SourcesDirectory)/esy.lock/index.json"' # vPrimary, here, is just a way to bust cache during debugging. Inspired from https://docs.microsoft.com/en-us/azure/devops/pipelines/caching/?view=azure-devops#can-i-clear-a-cache" 
       path: "~/.esy/source"
       cacheHitVar: ESY_SOURCE_CACHE_RESTORED
-    displayName:  "Caching ~/.esy/source"
+    displayName:  "Caching $(HOME)/.esy/source"
