--- a/.ci/utils/use-cache-esy.yml
+++ b/.ci/utils/use-cache-esy.yml
@@ -10,6 +10,6 @@ steps:
     condition: and(eq(variables['Build.Reason'], 'PullRequest'), ne(variables['Build.SourceBranch'], variables['System.PullRequest.TargetBranch']))
     inputs:
       key: 'v1 | esy-sources | "$(Agent.OS)" | "$(Build.SourcesDirectory)/esy.lock/index.json"' # vPrimary, here, is just a way to bust cache during debugging. Inspired from https://docs.microsoft.com/en-us/azure/devops/pipelines/caching/?view=azure-devops#can-i-clear-a-cache" 
-      path: "$(HOME)/.esy/source"
+      path: "$(Agent.HomeDirectory)/.esy/source"
       cacheHitVar: ESY_SOURCE_CACHE_RESTORED
-    displayName:  "Caching $(HOME)/.esy/source"
+    displayName:  "Caching $(Agent.HomeDirectory)/.esy/source"
