--- a/.ci/esy-build-steps.yml
+++ b/.ci/esy-build-steps.yml
@@ -4,7 +4,7 @@ steps:
   - template: utils/use-node.yml
   - template: utils/use-cache-yarn.yml
   - template: utils/use-esy.yml
-  - template: utils/use-cache-esy.yml
+  # - template: utils/use-cache-esy.yml
   - script: "esy install"
     displayName: "esy install"
   - template: utils/restore-build-cache.yml # Run this to make sure cached prebuilts work. 
