--- a/.ci/utils/use-esy.yml
+++ b/.ci/utils/use-esy.yml
@@ -1,5 +1,5 @@
 # steps to install esy globally
 
 steps:
-  - script: "npm install -g esy"
-    displayName: "install esy"
+  - script: "npm install -g @esy-nightly/esy"
+    displayName: "install nightly esy"
