--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ jobs:
   - template: .ci/build-platform.yml
     parameters:
       platform: Linux
-      vmImage: ubuntu-16.04
+      vmImage: ubuntu-latest
 
   - template: .ci/build-platform.yml
     parameters:
