--- a/npm-cli/templates/ci/azure-pipelines-template.yml
+++ b/npm-cli/templates/ci/azure-pipelines-template.yml
@@ -4,11 +4,16 @@ variables:
   esy__ci_cache_version: v1    # this is available to all jobs in env as $ESY__CI_CACHE_VERSION or in azure config as $(esy__ci_cache_version)
 
 trigger:
-  - master
-  - global
-  - release-*
-  - releases-*
-  - feature-*
+  branches:
+    include:
+    - master
+    - releases/*
+  paths:
+    exclude:
+    - README.html
+    - notes/*
+    - "*.md"
+    - LICENSE
 
 jobs:
   - template: .ci/build-platform.yml
