--- a/npm-cli/templates/ci/.ci/utils/use-esy.yml
+++ b/npm-cli/templates/ci/.ci/utils/use-esy.yml
@@ -1,5 +1,5 @@
 # steps to install esy globally
 
 steps:
-  - script: "npm install -g esy"
-    displayName: "install esy"
+  - script: "yarn global add esy"
+    displayName: "Install esy (via yarn)"
