Cache sources separately

--- a/npm-cli/templates/ci/.ci/esy-build-steps.yml
+++ b/npm-cli/templates/ci/.ci/esy-build-steps.yml
@@ -5,8 +5,9 @@ steps:
   - template: utils/use-cache-yarn.yml
   - template: utils/use-esy.yml
   - template: utils/use-cache-esy.yml
-  - script: "esy install"
+  - script: "esy install --cache-tarballs-path=$(Agent.HomeDirectory)/esy-sources"
     displayName: "esy install"
+  - template: utils/publish-sources.yml
   - template: utils/restore-build-cache.yml
   - script: "esy build --release"
     displayName: "esy build --release"
