--- a/npm-cli/templates/ci/.ci/utils/publish-sources.yml
+++ b/npm-cli/templates/ci/.ci/utils/publish-sources.yml
@@ -3,7 +3,7 @@ steps:
     displayName: '[Cache][Publish] Sources'
     condition: eq(variables['AGENT.OS'], 'Linux')
     inputs:
-      pathToPublish: "$(Agent.HomeDirectory)/esy-sources"
+      pathToPublish: "$(Build.SourcesDirectory)/esy-sources"
       artifactName: 'esy-sources'
       parallel: true
       parallelCount: 8
