--- a/.ci/utils/use-esy.yml
+++ b/.ci/utils/use-esy.yml
@@ -1,5 +1,9 @@
 # steps to install esy globally
 
 steps:
+  - script: "sudo npm install --prefix /usr/local --unsafe-perm -g @esy-nightly/esy"
+    displayName: "install nightly esy"
+    condition: ne(variables['Agent.OS'], 'Windows_NT')
   - script: "npm install -g @esy-nightly/esy"
     displayName: "install nightly esy"
+    condition: eq(variables['Agent.OS'], 'Windows_NT')
