--- a/.ci/esy-build-steps.yml
+++ b/.ci/esy-build-steps.yml
@@ -31,6 +31,7 @@ steps:
       OCAMLRUNPARAM: 'b'
   - task: PublishBuildArtifacts@1
     displayName: 'Upload sources'
+    condition: eq(variables['Agent.OS'], 'Windows_NT')
     inputs:
         pathToPublish: './npm-cli/pesy-0.5.0-dev.23.tgz'
         artifactName: 'pesy-npm-cli-source'
